syntax = "proto3";

import "github.com/fission/fission-workflow/pkg/types/types.proto";
import "github.com/fission/fission-workflow/pkg/eventstore/eventstore.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto";

package apiserver;

service WorkflowAPI {
    rpc Create (WorkflowSpec) returns (WorkflowIdentifier) {
        option (google.api.http) = {
           post: "/workflow"
           body: "*"
        };
    }

    rpc List (google.protobuf.Empty) returns (SearchWorkflowResponse) {
        option (google.api.http) = {
            get: "/workflow"
        };
    }

    rpc Get (WorkflowIdentifier) returns (Workflow) {
        option (google.api.http) = {
            get: "/workflow/{id}"
        };
    }

    rpc Validate (WorkflowSpec) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/workflow/validate"
            body: "*"
        };
    }
}

message WorkflowIdentifier {
    string id = 1;
}

message SearchWorkflowRequest {
}

message SearchWorkflowResponse {
    repeated string workflows = 1;
}

// The WorkflowInvocationAPI specifies the the externally exposed actions available for workflow invocations.
service WorkflowInvocationAPI {

    // Create a new workflow invocation
    //
    // In case the invocation specification is missing fields or contains invalid fields, a HTTP 400 is returned.
    rpc Invoke (WorkflowInvocationSpec) returns (WorkflowInvocationIdentifier) {
        option (google.api.http) = {
            post: "/invocation"
            body: "*"
        };
    }

    rpc InvokeSync (WorkflowInvocationSpec) returns (WorkflowInvocationContainer) {
        option (google.api.http) = {
            post: "/invocation/sync"
            body: "*"
            additional_bindings {
                get: "/invocation/sync"
			}
        };
    }

    // Cancel a workflow invocation
    //
    // This action is irreverisble. A canceled invocation cannot be resumed or restarted.
    // In case that an invocation already is canceled, has failed or has completed, nothing happens.
    // In case that an invocation does not exist a HTTP 404 error status is returned.
    rpc Cancel (WorkflowInvocationIdentifier) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/invocation/{id}"
        };
    }

    rpc List (google.protobuf.Empty) returns (WorkflowInvocationList) {
        option (google.api.http) = {
            get: "/invocation"
        };
    }

    // Get the specification and status of a workflow invocation
    //
    // Get returns three different aspects of the workflow invocation, namely the spec (specification), status and logs.
    // To lighten the request load, consider using a more specific request.
    rpc Get (WorkflowInvocationIdentifier) returns (WorkflowInvocationContainer) {
        option (google.api.http) = {
            get: "/invocation/{id}"
        };
    }
}

message WorkflowInvocationIdentifier {
    string id = 1;
}

message WorkflowInvocationQuery {
    string subject = 1;
}

message WorkflowInvocationList {
    repeated string invocations = 1;
}

message WorkflowInvocationGetReponse {
    repeated Event events = 1;
}

//message WorkflowInvocationRequest {
//    WorkflowInvocationSpec spec = 1;
//    bool sync = 2; // async or sync (async by default)
//    bool hideMetadata = 3; // If true, only show the output generated
//}


service AdminAPI {
    rpc Status (google.protobuf.Empty) returns (Health) {
        option (google.api.http) = {
            get: "/status"
        };
    }
}

message Health {
    string status = 1;
}

service FunctionEnvApi {

    // Debug purposes
    rpc Invoke (FunctionInvocationSpec) returns (FunctionInvocation) {
        option (google.api.http) = {
            post: "/function"
            body: "*"
        };
    }
}
